--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
-{
+  {
     "trailingComma": "es5",
-    "tabWidth": 8,
-    "semi": false,
+    "tabWidth": 2,
+    "semi": true,
     "singleQuote": true,
     "arrowParens": "avoid"
   }
